Option to hide start/end analysis buttons on mobile https://github.com/Siderite/lichessTools/issues/1725

--- a/tools/mobileExperience/tool.css
+++ b/tools/mobileExperience/tool.css
@@ -88,6 +88,10 @@ body.lichessTools div.analyse__controls .jumps:has(button[data-act="next"].disab
   cursor: default;
 }
 
+body.lichessTools .lichessTools-hideStartEnd .jumps button:is([data-act="first"],[data-act="last"]) {
+  display:none;
+}
+
 @media (max-width: 500px) {
   body.lichessTools.mobile.lichessTools-mobileExperience div.analyse__controls:not(.lichessTools-liveStatus) {
     display: inline-grid;
